Hide the blank lines

--- a/templates/acl.erb
+++ b/templates/acl.erb
@@ -1,5 +1,5 @@
 acl <%= name %> {
-<%- addresses.each do |address| %>
+<%- addresses.each do |address| -%>
 	<%= address %>;
-<%- end %>
+<%- end -%>
 };
