--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -1,3 +1,6 @@
 # This file is managed by puppet - changes will be lost
 include "<%= confdir %>/acls.conf";
 include "<%= confdir %>/views.conf";
+<%- if scope.lookupvar('osfamily') == 'Debian' -%>
+include "<%= confdir %>/named.conf.default-zones";
+<%- end -%>
