named.conf is not a concat, make one for keys

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -1,5 +1,6 @@
 # This file is managed by puppet - changes will be lost
 include "<%= confdir %>/acls.conf";
+include "<%= confdir %>/keys.conf";
 include "<%= confdir %>/views.conf";
 
 options {
