--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -7,9 +7,9 @@ options {
 	directory "<%= cachedir %>";
 <%- if not forwarders.empty? -%>
 	forwarders {
-<%- forwarders.each do |forwarder| -%>
+<%-   forwarders.each do |forwarder| -%>
 		<%= forwarder %>;
-<%- end -%>
+<%-   end -%>
 	};
 <%- end -%>
 	auth-nxdomain <%= auth_nxdomain ? 'yes' : 'no' %>;
@@ -17,4 +17,7 @@ options {
 	dnssec-enable <%= dnssec ? 'yes' : 'no' %>;
 	dnssec-validation <%= dnssec ? 'yes' : 'no' %>;
 	dnssec-lookaside <%= dnssec ? 'auto' : 'no' %>;
+<%- if version != '' -%>
+	version "<%= version %>";
+<%- end -%>
 };
