Access class variables the new way
Recent puppets demand that puppet class variables be qualified as instance
members when accessed from within a template.

--- a/templates/acl.erb
+++ b/templates/acl.erb
@@ -1,6 +1,6 @@
 
-acl <%= name %> {
-<%- addresses.each do |address| -%>
+acl <%= @name %> {
+<%- @addresses.each do |address| -%>
 	<%= address %>;
 <%- end -%>
 };
