--- a/templates/key.conf.erb
+++ b/templates/key.conf.erb
@@ -1,5 +1,5 @@
 
-key <%= name %> {
-	algorithm <%= algorithm %>;
-	secret "<%= secret %>";
+key <%= @name %> {
+	algorithm <%= @algorithm %>;
+	secret "<%= @secret %>";
 };
