--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -1,25 +1,25 @@
 # This file is managed by puppet - changes will be lost
-include "<%= confdir %>/acls.conf";
-include "<%= confdir %>/keys.conf";
-include "<%= confdir %>/views.conf";
+include "<%= @confdir %>/acls.conf";
+include "<%= @confdir %>/keys.conf";
+include "<%= @confdir %>/views.conf";
 
 options {
-	directory "<%= cachedir %>";
-<%- if not forwarders.empty? -%>
+	directory "<%= @cachedir %>";
+<%- if not @forwarders.empty? -%>
 	forwarders {
-<%-   forwarders.each do |forwarder| -%>
+<%-   @forwarders.each do |forwarder| -%>
 		<%= forwarder %>;
 <%-   end -%>
 	};
 <%- end -%>
-	auth-nxdomain <%= auth_nxdomain ? 'yes' : 'no' %>;
+	auth-nxdomain <%= @auth_nxdomain ? 'yes' : 'no' %>;
 	listen-on-v6 { any; };
-	dnssec-enable <%= dnssec ? 'yes' : 'no' %>;
-	dnssec-validation <%= dnssec ? 'yes' : 'no' %>;
-	dnssec-lookaside <%= dnssec ? 'auto' : 'no' %>;
-<%- if version != '' -%>
-	version "<%= version %>";
+	dnssec-enable <%= @dnssec ? 'yes' : 'no' %>;
+	dnssec-validation <%= @dnssec ? 'yes' : 'no' %>;
+	dnssec-lookaside <%= @dnssec ? 'auto' : 'no' %>;
+<%- if @version != '' -%>
+	version "<%= @version %>";
 <%- end -%>
 };
 
-include "<%= confdir %>/named.conf.local";
+include "<%= @confdir %>/named.conf.local";
