Handle array values idiomatically

--- a/templates/acl.erb
+++ b/templates/acl.erb
@@ -1,6 +1,6 @@
 
 acl <%= @name %> {
-<%- @addresses.each do |address| -%>
+<%- Array(@addresses).each do |address| -%>
 	<%= address %>;
 <%- end -%>
 };
