--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -2,6 +2,13 @@
 include "<%= @confdir %>/acls.conf";
 include "<%= @confdir %>/keys.conf";
 include "<%= @confdir %>/views.conf";
+<%- if @rndc -%>
+
+include "<%= @confdir %>/rndc.key";
+controls {
+	inet 127.0.0.1 allow { localhost; } keys { rndc-key; };
+};
+<%- end -%>
 
 options {
 	directory "<%= @cachedir %>";
