added option param to set global options in the named.conf file

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -27,6 +27,9 @@ options {
 <%- if @version != '' -%>
 	version "<%= @version %>";
 <%- end -%>
+<% @options.each do |value| -%>
+<%=		value %>
+<% end -%>
 };
 
 include "<%= @confdir %>/named.conf.local";
