Add support for transfer-source

--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -37,6 +37,9 @@ zone "<%= @_domain %>" {
 <%-   end -%>
 	};
 <%- end -%>
+<%- if @transfer_source and @transfer_source != ''-%>
+	transfer-source <%= @transfer_source %>
+<%- end -%>
 <%- if @allow_updates and @allow_updates != '' -%>
 	allow-update {
 <%-   Array(@allow_updates).each do |allow_update| -%>
