added support for view directive "match-recursive-only"
allows for dedicated views separating resolver and authorative functions
within the same server

--- a/templates/view.erb
+++ b/templates/view.erb
@@ -15,6 +15,9 @@ view "<%= @name %>" {
 	};
 <%- end -%>
 	recursion <%= @recursion ? 'yes' : 'no' %>;
+<%- if @recursion_match_only -%>
+	match-recursive-only yes;
+<%- end -%>
 <%- if @recursion -%>
 <%-   if @recursion_match_clients and @recursion_match_clients != '' -%>
 	allow-recursion {
