add closing block

--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -16,6 +16,7 @@ zone "<%= @_domain %>" {
 <%-   end -%>
 <%-   unless @zone_type == 'stub' -%>
 	notify <%= @ns_notify ? 'yes' : 'no' %>;
+<%-   end -%>
 <%-   if @also_notify and @also_notify != '' -%>
 	also-notify {
 <%-     Array(@also_notify).each do |server| -%>
