Add masters.conf include to named.conf.

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -1,6 +1,7 @@
 # This file is managed by puppet - changes will be lost
 include "<%= @confdir %>/acls.conf";
 include "<%= @confdir %>/keys.conf";
+include "<%= @confdir %>/masters.conf";
 include "<%= @confdir %>/views.conf";
 <%- if @statistics_port -%>
 
