Add the ability to specify server directives in a view (e.g. using TSIG keys) with a slave -> master.

--- a/templates/view.erb
+++ b/templates/view.erb
@@ -34,6 +34,15 @@ view "<%= @name %>" {
 	};
 <%-   end -%>
 <%- end -%>
+<%- if @server -%>
+<%-   @server.each_pair do |srv, srv_values| -%>
+	server <%= srv %> {
+<%-		Array(srv_values).each do |srv_value| -%>
+		<%= srv_value %>;
+<%-		end -%>
+	};
+<%-	  end -%>
+<%- end -%>
 <%- if scope.lookupvar('osfamily') == 'Debian' -%>
 	include "<%= @confdir %>/named.conf.default-zones";
 <%- end -%>
