Add support for notify-source and also-notify
Conflicts:
	templates/view.erb

--- a/templates/view.erb
+++ b/templates/view.erb
@@ -42,7 +42,16 @@ view "<%= @name %>" {
 		keys { <%= properties['keys'] %>; };
 <%-     end -%>
 	};
-<%-   end -%>
+<%- end -%>
+<%- if @also_notify and @also_notify != '' -%>
+	also-notify {
+<%-     Array(@also_notify).each do |server| -%>
+		<%= server %>;
+<%-     end -%>
+	};
+<%- end -%>
+<%- if @notify_source and @notify_source != '' -%>
+	notify-source <%= @notify_source %>;
 <%- end -%>
 <%- if scope.lookupvar('osfamily') == 'Debian' -%>
 	include "<%= @confdir %>/named.conf.default-zones";
