Support minimal-responses setting on views

--- a/templates/view.erb
+++ b/templates/view.erb
@@ -44,6 +44,9 @@ view "<%= @name %>" {
 	};
 <%-   end -%>
 <%- end -%>
+<%- if @minimal_responses -%>
+	minimal-responses yes;
+<%- end -%>
 <%- if scope.lookupvar('osfamily') == 'Debian' -%>
 	include "<%= @confdir %>/named.conf.default-zones";
 <%- end -%>
