Add option to filter ipv6 address on ipv4
refs https://kb.isc.org/article/AA-00576/0/Filter-AAAA-option-in-BIND-9-.html

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -24,6 +24,9 @@ options {
 	auth-nxdomain <%= @auth_nxdomain ? 'yes' : 'no' %>;
 	listen-on-v6 { any; };
 	dnssec-enable <%= @dnssec ? 'yes' : 'no' %>;
+<%- if @filter_ipv6 -%>
+	filter-aaaa-on-v4 yes;
+<%- end -%>
 <%- if @dnssec -%>
 	dnssec-validation yes;
 	dnssec-lookaside auto;
