support forwarding a zone to a dns server on port other than 53
e.g. Consul runs on 8600
https://www.consul.io/docs/guides/forwarding.html
zone "consul" IN {
  type forward;
  forward only;
  forwarders { 127.0.0.1 port 8600; };
};

--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -67,7 +67,7 @@ zone "<%= @_domain %>" {
 <%- if @forwarders and @forwarders != '' -%>
 	forwarders {
 <%-   Array(@forwarders).each do |forwarder| -%>
-		<%= forwarder %>;
+		<%= forwarder %><%-if @forwarders_port != 53 -%> port <%= @forwarders_port %><%- end -%>;
 <%-   end -%>
 	};
 <%- end -%>
