--- a/templates/rndc-helper.erb
+++ b/templates/rndc-helper.erb
@@ -14,6 +14,6 @@ param_lookup "${zone_name}" | while read Z; do
   if [ $# == 1 ]; then
     echo $Z
   else
-    sudo rndc "${@:1:$(($# - 1))}" $Z
+    /usr/sbin/rndc "${@:1:$(($# - 1))}" $Z
   fi
 done
