--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -34,6 +34,11 @@ options {
 <%- if @version != '' -%>
 	version "<%= @version %>";
 <%- end -%>
+<%- if @local_options -%>
+		<%- @local_options.each do |key, val| -%>
+	<%= key %> <%= val %>;
+		<%- end -%>
+<% end -%>
 };
 <%- if @include_local -%>
 
