Support for "forward" statement
Add "forward" statement in options { } block in named.conf.

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -21,6 +21,9 @@ options {
 <%-   end -%>
 	};
 <%- end -%>
+<%- if @forward != '' -%>
+	forward <%= @forward %>;
+<%- end -%>
 	auth-nxdomain <%= @auth_nxdomain ? 'yes' : 'no' %>;
 	listen-on-v6 { any; };
 	dnssec-enable <%= @dnssec ? 'yes' : 'no' %>;
