Push the class defaults into hiera
The bind class parameter defaults values are meant to be supplied via module
data. Really, these ought to come through the bind::defaults class from hiera,
but that class is currently the home of platform defaults which are not meant
to be overridden by the user. This is a first step, maybe? A normalization for
sure.

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -21,7 +21,7 @@ options {
 <%-   end -%>
 	};
 <%- end -%>
-<%- if @forward and @forward != '' -%>
+<%- if @forward != '' -%>
 	forward <%= @forward %>;
 <%- end -%>
 	auth-nxdomain <%= @auth_nxdomain ? 'yes' : 'no' %>;
