--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -2,6 +2,7 @@
 include "<%= @confdir %>/acls.conf";
 include "<%= @confdir %>/keys.conf";
 include "<%= @confdir %>/views.conf";
+include "<%= @confdir %>/servers.conf";
 <%- if @statistics_port -%>
 
 statistics-channels {
