Implement support for logging configuration
Adds `bind::logging::channel` and `bind::logging::category` defines in order to
support logging configuration.

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -1,4 +1,5 @@
 # This file is managed by puppet - changes will be lost
+include "<%= @confdir %>/logging.conf";
 include "<%= @confdir %>/acls.conf";
 include "<%= @confdir %>/keys.conf";
 include "<%= @confdir %>/views.conf";
