--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -35,6 +35,9 @@ options {
 <%- if @dnssec -%>
 	dnssec-validation yes;
 	dnssec-lookaside auto;
+<%-   if @isc_bind_keys -%>
+        bindkeys-file "<%= @isc_bind_keys %>";
+<%-   end -%>
 <%- end -%>
 <%- if @version != '' -%>
 	version "<%= @version %>";
