--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -42,6 +42,12 @@ options {
 <%- if @version != '' -%>
 	version "<%= @version %>";
 <%- end -%>
+<%- if @tkey_gssapi_credential -%>
+        tkey-gssapi-credential "<%= @tkey_gssapi_credential %>";
+<%- end -%>
+<%- if @tkey_domain -%>
+        tkey-domain "<%= @tkey_domain %>";
+<%- end -%>
 };
 <%- if @include_local -%>
 
