don't add print-* logging options if destination is null

--- a/templates/logging_channel.erb
+++ b/templates/logging_channel.erb
@@ -12,7 +12,9 @@
 <%- if @severity and @severity != '' -%>
 		severity <%= @severity %>;
 <%- end -%>
+<%- if @destination != 'null' -%>
 		print-category <%= @print_category ? 'yes' : 'no' %>;
 		print-severity <%= @print_severity ? 'yes' : 'no' %>;
 		print-time <%= @print_time ? 'yes' : 'no' %>;
+<%- end -%>
 	};
