Allow setting check_names (for MS dns slave compatibility.)

--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -20,6 +20,9 @@ zone "<%= @_domain %>" {
 	notify <%= @ns_notify ? 'yes' : 'no' %>;
 <%-   end
     end -%>
+<%-   if !@check_names -%>
+       check-names ignore;
+<%-     end -%>
 <%- if @also_notify and @also_notify != '' -%>
 	also-notify {
 <%-   Array(@also_notify).each do |server| -%>
