Add transfer_format to global options

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -48,6 +48,9 @@ options {
 <%- if @tkey_domain -%>
         tkey-domain "<%= @tkey_domain %>";
 <%- end -%>
+<%- if @transfer_format -%>
+    transfer-format <%= @transfer_format %>;
+<%- end -%>
 };
 <%- if @include_local -%>
 
