Add check_names to zone configuration

--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -83,4 +83,7 @@ zone "<%= @_domain %>" {
 <%- if @transfer_format -%>
     transfer-format <%= @transfer_format %>;
 <%- end -%>
+<%- if @check_names -%>
+    check-names <%= @check_names %>;
+<%- end -%>
 };
