--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -51,6 +51,9 @@ options {
 <%- if @transfer_format -%>
     transfer-format <%= @transfer_format %>;
 <%- end -%>
+<%- if @check_names_type != '' and @check_names_handling != '' -%>
+    check-names <%= @check_names_type %> <%= @check_names_handling %>;
+<%- end -%>
 };
 <%- if @include_local -%>
 
