--- a/templates/view.erb
+++ b/templates/view.erb
@@ -72,6 +72,9 @@ view "<%= @name %>" {
 <%- if @transfer_format -%>
     transfer-format <%= @transfer_format %>;
 <%- end -%>
+<%- if @check_names_type != '' and @check_names_handling != '' -%>
+    check-names <%= @check_names_type %> <%= @check_names_handling %>;
+<%- end -%>
 <%- if @empty_zones != '' -%>
 	empty-zones-enable <%= @empty_zones ? 'yes' : 'no' %>;
 <%- end -%>
