--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -80,10 +80,10 @@ zone "<%= @_domain %>" {
 <%-   end -%>
 	};
 <%- end -%>
-<%- if @transfer_format -%>
+<%- if @transfer_format and @transfer_format != '' -%>
     transfer-format <%= @transfer_format %>;
 <%- end -%>
-<%- if @check_names -%>
+<%- if @check_names and @check_names != ''-%>
     check-names <%= @check_names %>;
 <%- end -%>
 };
