Allow specifying options for files, allowing bind to rotate it's own logs - could probably be done a bit neater

--- a/templates/logging_channel.erb
+++ b/templates/logging_channel.erb
@@ -1,7 +1,7 @@
 	channel <%= @name %> {
 <%- case @destination -%>
 <%-   when "file" -%>
-		file "<%= @file_path %>/<%= @file_name %>";
+		file "<%= @file_path %>/<%= @file_name %>" <%= @file_options %>;
 <%-   when "syslog" -%>
 		syslog <%= @syslog_facility %>;
 <%-   when "stderr" -%>
