added allow-query statement to a zone definition

--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -61,6 +61,13 @@ zone "<%= @_domain %>" {
 <%-   end -%>
 	};
 <%- end -%>
+<%- if @allow_query and @allow_query != '' -%>
+	allow-query {
+<%-   Array(@allow_query).each do |query_client| -%>
+		<%= query_client %>;
+<%-   end -%>
+	};
+<%- end -%>
 <%- if @allow_transfers and @allow_transfers != '' -%>
 	allow-transfer {
 <%-   Array(@allow_transfers).each do |allow_transfer| -%>
