added server-addresses clause to zone template for static-stub zone type. Requires BIND9.8+

--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -20,6 +20,13 @@ zone "<%= @_domain %>" {
 	notify <%= @ns_notify ? 'yes' : 'no' %>;
 <%-   end
     end -%>
+<%- if @zone_type = 'static_stub' and @server_addresses != '' -%>
+	server-addresses {
+<%-   Array(@server_addresses).each do |server| -%>
+		<%= server %>;
+<%-   end -%>
+	};
+<%- end -%>
 <%- if @also_notify and @also_notify != '' -%>
 	also-notify {
 <%-   Array(@also_notify).each do |server| -%>
