Allowed @default_zones_include to be an array

--- a/templates/view.erb
+++ b/templates/view.erb
@@ -135,7 +135,9 @@ view "<%= @name %>" {
 	notify-source <%= @notify_source %>;
 <%- end -%>
 <%- if @include_default_zones and @default_zones_include -%>
-	include "<%= @default_zones_include %>";
+<%-   Array(@default_zones_include).each do |zone| -%>
+	include "<%= zone %>";
+<%-   end -%>
 <%- end -%>
 
 <%- Array(@zones).each do |zone| -%>
