--- a/templates/zone.conf.erb
+++ b/templates/zone.conf.erb
@@ -20,7 +20,7 @@ zone "<%= @_domain %>" {
 	notify <%= @ns_notify ? 'yes' : 'no' %>;
 <%-   end
     end -%>
-<%- if @zone_type = 'static_stub' and @server_addresses != '' -%>
+<%- if @zone_type == 'static_stub' and @server_addresses != '' -%>
 	server-addresses {
 <%-   Array(@server_addresses).each do |server| -%>
 		<%= server %>;
