Added query-source to named.conf

--- a/templates/named.conf.erb
+++ b/templates/named.conf.erb
@@ -55,6 +55,9 @@ options {
 <%- end -%>
 	};
 <%- end -%>
+<%- if @query_source and @query_source != '' -%>
+	query-source address <%= @query_source %>;
+<%- end -%>
 };
 <%- if @include_local -%>
 
